# swe

./: .gitignore  Core App Features  Personas & Interviews  Project Assignment Information  README.md  Sprint 1 Review  Sprint Retrospective  User stories & Acceptance criteria  docker-compose.yml  plan.md  pyproject.toml  run_backend.sh
backend/: README.md  app.py  config.py  db.py  models.py  pyproject.toml
backend/models/: model.py
backend/repository/: station_repo.py  weather_repo.py
backend/routes/: api_routes.py  auth_routes.py  page_routes.py
backend/scraper/: jcdecaux.py  station_scraper.py  weather.py  weather_scraper.py
backend/services/: auth_service.py  station_service.py  test_station_service.py  weather_service.py
backend/utils/: db.py
docker/mysql/: init.sql
docs/: Core App Features  plan.md
frontend/: index.html
frontend/static/css/: styles.css
frontend/static/js/: app.js
frontend/templates/: about.html  base.html  howto.html  index.html  login.html  profile.html  signup.html  subscription.html
ml_training/: bike_availability_model.joblib  generate_dummy_data.py  main.py  pyproject.toml  training.ipynb  training.py
scripts/: verify_backend.py
tests/test_backend/test_services/: test_station_service.py
